src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__cast_jsonb_to_int64.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc(sqlname = \"jsonb_to_bigint\", is_monotone = true)]\nfn cast_jsonb_to_int64<'a>(a: JsonbRef<'a>) -> Result<i64, EvalError> {\n    match a.into_datum() {\n        Datum::Numeric(a) => cast_numeric_to_int64(a.into_inner()),\n        datum => {\n            Err(EvalError::InvalidJsonbCast {\n                from: jsonb_typeof(JsonbRef::from_datum(datum)).into(),\n                to: \"bigint\".into(),\n            })\n        }\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastJsonbToInt64;
impl crate::func::EagerUnaryFunc for CastJsonbToInt64 {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = Result<i64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_jsonb_to_int64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastJsonbToInt64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("jsonb_to_bigint")
    }
}
fn cast_jsonb_to_int64<'a>(a: JsonbRef<'a>) -> Result<i64, EvalError> {
    match a.into_datum() {
        Datum::Numeric(a) => cast_numeric_to_int64(a.into_inner()),
        datum => {
            Err(EvalError::InvalidJsonbCast {
                from: jsonb_typeof(JsonbRef::from_datum(datum)).into(),
                to: "bigint".into(),
            })
        }
    }
}
