src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__cast_jsonbable_to_jsonb.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc(sqlname = \"jsonbable_to_jsonb\")]\nfn cast_jsonbable_to_jsonb<'a>(a: JsonbRef<'a>) -> JsonbRef<'a> {\n    match a.into_datum() {\n        Datum::Numeric(n) => {\n            let n = n.into_inner();\n            let datum = if n.is_finite() {\n                Datum::from(n)\n            } else if n.is_nan() {\n                Datum::String(\"NaN\")\n            } else if n.is_negative() {\n                Datum::String(\"-Infinity\")\n            } else {\n                Datum::String(\"Infinity\")\n            };\n            JsonbRef::from_datum(datum)\n        }\n        datum => JsonbRef::from_datum(datum),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastJsonbableToJsonb;
impl crate::func::EagerUnaryFunc for CastJsonbableToJsonb {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = JsonbRef<'a>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_jsonbable_to_jsonb(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for CastJsonbableToJsonb {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("jsonbable_to_jsonb")
    }
}
fn cast_jsonbable_to_jsonb<'a>(a: JsonbRef<'a>) -> JsonbRef<'a> {
    match a.into_datum() {
        Datum::Numeric(n) => {
            let n = n.into_inner();
            let datum = if n.is_finite() {
                Datum::from(n)
            } else if n.is_nan() {
                Datum::String("NaN")
            } else if n.is_negative() {
                Datum::String("-Infinity")
            } else {
                Datum::String("Infinity")
            };
            JsonbRef::from_datum(datum)
        }
        datum => JsonbRef::from_datum(datum),
    }
}
