src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__jsonb_pretty.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc()]\nfn jsonb_pretty<'a>(a: JsonbRef<'a>) -> String {\n    let mut buf = String::new();\n    strconv::format_jsonb_pretty(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct JsonbPretty;
impl crate::func::EagerUnaryFunc for JsonbPretty {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        jsonb_pretty(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for JsonbPretty {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(jsonb_pretty))
    }
}
fn jsonb_pretty<'a>(a: JsonbRef<'a>) -> String {
    let mut buf = String::new();
    strconv::format_jsonb_pretty(&mut buf, a);
    buf
}
