src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__jsonb_strip_nulls.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc()]\nfn jsonb_strip_nulls<'a>(a: JsonbRef<'a>) -> Jsonb {\n    fn strip_nulls(a: Datum, row: &mut RowPacker) {\n        match a {\n            Datum::Map(dict) => {\n                row.push_dict_with(|row| {\n                    for (k, v) in dict.iter() {\n                        match v {\n                            Datum::JsonNull => {}\n                            _ => {\n                                row.push(Datum::String(k));\n                                strip_nulls(v, row);\n                            }\n                        }\n                    }\n                })\n            }\n            Datum::List(list) => {\n                row.push_list_with(|row| {\n                    for elem in list.iter() {\n                        strip_nulls(elem, row);\n                    }\n                })\n            }\n            _ => row.push(a),\n        }\n    }\n    let mut row = Row::default();\n    strip_nulls(a.into_datum(), &mut row.packer());\n    Jsonb::from_row(row)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct JsonbStripNulls;
impl crate::func::EagerUnaryFunc for JsonbStripNulls {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = Jsonb;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        jsonb_strip_nulls(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for JsonbStripNulls {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(jsonb_strip_nulls))
    }
}
fn jsonb_strip_nulls<'a>(a: JsonbRef<'a>) -> Jsonb {
    fn strip_nulls(a: Datum, row: &mut RowPacker) {
        match a {
            Datum::Map(dict) => {
                row.push_dict_with(|row| {
                    for (k, v) in dict.iter() {
                        match v {
                            Datum::JsonNull => {}
                            _ => {
                                row.push(Datum::String(k));
                                strip_nulls(v, row);
                            }
                        }
                    }
                })
            }
            Datum::List(list) => {
                row.push_list_with(|row| {
                    for elem in list.iter() {
                        strip_nulls(elem, row);
                    }
                })
            }
            _ => row.push(a),
        }
    }
    let mut row = Row::default();
    strip_nulls(a.into_datum(), &mut row.packer());
    Jsonb::from_row(row)
}
