src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__jsonb_typeof.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc()]\nfn jsonb_typeof<'a>(a: JsonbRef<'a>) -> &'a str {\n    match a.into_datum() {\n        Datum::Map(_) => \"object\",\n        Datum::List(_) => \"array\",\n        Datum::String(_) => \"string\",\n        Datum::Numeric(_) => \"number\",\n        Datum::True | Datum::False => \"boolean\",\n        Datum::JsonNull => \"null\",\n        d => panic!(\"Not jsonb: {:?}\", d),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct JsonbTypeof;
impl crate::func::EagerUnaryFunc for JsonbTypeof {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = &'a str;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        jsonb_typeof(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for JsonbTypeof {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(jsonb_typeof))
    }
}
fn jsonb_typeof<'a>(a: JsonbRef<'a>) -> &'a str {
    match a.into_datum() {
        Datum::Map(_) => "object",
        Datum::List(_) => "array",
        Datum::String(_) => "string",
        Datum::Numeric(_) => "number",
        Datum::True | Datum::False => "boolean",
        Datum::JsonNull => "null",
        d => panic!("Not jsonb: {:?}", d),
    }
}
